fix: rbac issue

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -25,12 +25,8 @@ rules:
   resources:
   - endpoints
   verbs:
-  - create
-  - delete
   - get
   - list
-  - patch
-  - update
   - watch
 - apiGroups:
   - ""
@@ -67,6 +63,7 @@ rules:
   - list
   - patch
   - update
+  - watch
 - apiGroups:
   - ""
   resources:
@@ -86,6 +83,7 @@ rules:
   verbs:
   - get
   - list
+  - watch
 - apiGroups:
   - ""
   resources:
@@ -145,10 +143,11 @@ rules:
   - list
   - patch
   - update
+  - watch
 - apiGroups:
   - k6.io
   resources:
-  - k6s
+  - testruns
   verbs:
   - create
   - delete
@@ -253,6 +252,12 @@ rules:
   - patch
   - update
   - watch
+- apiGroups:
+  - windtunnel.plantd.org
+  resources:
+  - datasets/finalizers
+  verbs:
+  - update
 - apiGroups:
   - windtunnel.plantd.org
   resources:
@@ -394,8 +399,13 @@ rules:
   resources:
   - schemas
   verbs:
+  - create
+  - delete
   - get
   - list
+  - patch
+  - update
+  - watch
 - apiGroups:
   - windtunnel.plantd.org
   resources:
