--- a/bundle.yaml
+++ b/bundle.yaml
@@ -2345,12 +2345,8 @@ rules:
   resources:
   - endpoints
   verbs:
-  - create
-  - delete
   - get
   - list
-  - patch
-  - update
   - watch
 - apiGroups:
   - ""
@@ -2387,6 +2383,7 @@ rules:
   - list
   - patch
   - update
+  - watch
 - apiGroups:
   - ""
   resources:
@@ -2406,6 +2403,7 @@ rules:
   verbs:
   - get
   - list
+  - watch
 - apiGroups:
   - ""
   resources:
@@ -2465,10 +2463,11 @@ rules:
   - list
   - patch
   - update
+  - watch
 - apiGroups:
   - k6.io
   resources:
-  - k6s
+  - testruns
   verbs:
   - create
   - delete
@@ -2573,6 +2572,12 @@ rules:
   - patch
   - update
   - watch
+- apiGroups:
+  - windtunnel.plantd.org
+  resources:
+  - datasets/finalizers
+  verbs:
+  - update
 - apiGroups:
   - windtunnel.plantd.org
   resources:
@@ -2714,8 +2719,13 @@ rules:
   resources:
   - schemas
   verbs:
+  - create
+  - delete
   - get
   - list
+  - patch
+  - update
+  - watch
 - apiGroups:
   - windtunnel.plantd.org
   resources:
