--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -3,11 +3,10 @@ name: Test
 on: [pull_request]
 
 jobs:
-  run:
-    name: Test
+  test:
     runs-on: ubuntu-latest
     steps:
-      - name: Check out code
+      - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Install Go
