--- a/config/crd/bases/windtunnel.plantd.org_datasets.yaml
+++ b/config/crd/bases/windtunnel.plantd.org_datasets.yaml
@@ -102,10 +102,12 @@ spec:
                       properties:
                         max:
                           description: Maximum value of the range.
+                          format: int32
                           minimum: 0
                           type: integer
                         min:
                           description: Minimum value of the range.
+                          format: int32
                           minimum: 0
                           type: integer
                       required:
@@ -118,10 +120,12 @@ spec:
                       properties:
                         max:
                           description: Maximum value of the range.
+                          format: int32
                           minimum: 0
                           type: integer
                         min:
                           description: Minimum value of the range.
+                          format: int32
                           minimum: 0
                           type: integer
                       required:
