--- a/config/crd/bases/windtunnel.plantd.org_experiments.yaml
+++ b/config/crd/bases/windtunnel.plantd.org_experiments.yaml
@@ -299,10 +299,12 @@ spec:
                                 properties:
                                   max:
                                     description: Maximum value of the range.
+                                    format: int32
                                     minimum: 0
                                     type: integer
                                   min:
                                     description: Minimum value of the range.
+                                    format: int32
                                     minimum: 0
                                     type: integer
                                 required:
@@ -315,10 +317,12 @@ spec:
                                 properties:
                                   max:
                                     description: Maximum value of the range.
+                                    format: int32
                                     minimum: 0
                                     type: integer
                                   min:
                                     description: Minimum value of the range.
+                                    format: int32
                                     minimum: 0
                                     type: integer
                                 required:
